--- a/hlc-security-web/src/main/resources/application.properties
+++ b/hlc-security-web/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #server
-server.port=80
+server.port=8089
 spring.application.name=hlc-security-web
 
 #datasource
@@ -50,5 +50,9 @@ hlc.security.social.qq.providerId=callback.do
 #…ÁΩªµ«¬º Œ¢–≈
 hlc.security.social.weixin.app-id=wxd99431bbff8305a0
 hlc.security.social.weixin.app-secret=60f78681d063590a469f1b297feff3c4
+
+#security oauth2≈‰÷√
+security.oauth2.client.client-id=hlc
+security.oauth2.client.client-secret=hlcsecret
 
 
