第三方登录功能完善

--- a/hlc-security-web/src/main/resources/application.properties
+++ b/hlc-security-web/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #server
-server.port=8089
+server.port=80
 spring.application.name=hlc-security-web
 
 #datasource
@@ -52,7 +52,10 @@ hlc.security.social.weixin.app-id=wxd99431bbff8305a0
 hlc.security.social.weixin.app-secret=60f78681d063590a469f1b297feff3c4
 
 #security oauth2≈‰÷√
-security.oauth2.client.client-id=hlc
-security.oauth2.client.client-secret=hlcsecret
+hlc.security.oauth2.clients[0].clientId=hlc
+hlc.security.oauth2.clients[0].clientSecret=hlcsecret
+hlc.security.oauth2.clients[0].tokenValiditySeconds=6200
 
+hlc.security.oauth2.clients[1].clientId=test
+hlc.security.oauth2.clients[1].clientSecret=testsecret
 
