--- a/hlc-security-web/src/main/resources/application.properties
+++ b/hlc-security-web/src/main/resources/application.properties
@@ -51,6 +51,8 @@ hlc.security.social.qq.providerId=callback.do
 hlc.security.social.weixin.app-id=wxd99431bbff8305a0
 hlc.security.social.weixin.app-secret=60f78681d063590a469f1b297feff3c4
 
+hlc.security.oauth2.storeType=jwt
+hlc.security.oauth2.jwtStr = hello_security
 #security oauth2≈‰÷√
 hlc.security.oauth2.clients[0].clientId=hlc
 hlc.security.oauth2.clients[0].clientSecret=hlcsecret
